syntax = "proto2";
package PTP.Sync;
import "PTP.Common.proto";
option java_package = "chat.wai.protobuf";

option optimize_for = LITE_RUNTIME;

message SyncReq{
  optional Common.UserStoreData userStoreData = 1;
}

message SyncRes{
  optional Common.UserStoreData userStoreData = 1;
  optional Common.ERR err = 100;
}
